# WayKey

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
WayKey/cli/: main.py  run.sh
WayKey/daemon/: _device.py  default_device.json  main.py  run.sh
cli/: index.html
docs/: cli.md  index.md  library.md
examples/: HelloWorld.py  HelloWorld.sh  Mouse.py  mouse.sh
search/: search_index.json
waykey/cli/: main.py
waykey/daemon/: _device.py  main.py
