[project]
name = "WayKey"
readme = "README.md"
description = "Wayland automation"
requires-python = ">=3.13"
authors = [
    { name = "Nmstr", email = "publicNamester@gmail.com" }
]
keywords = ["wayland", "automation", "input"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Other/Nonlisted Topic",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
[project.urls]
Source = "https://github.com/Nmstr/WayKey"
Issues = "https://github.com/Nmstr/WayKey/issues"

dependencies = [
    "evdev>=1.9.2",
    "screeninfo>=0.8.1",
]
